--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/tailwind": "^6.0.0",
     "@fontsource-variable/dancing-script": "^5.1.1",
+    "@fontsource/allura": "^5.1.1",
+    "@fontsource/cormorant-garamond": "^5.1.1",
+    "@fontsource/cormorant-upright": "^5.1.1",
     "@fontsource/tangerine": "^5.1.1",
-    "astro": "^5.1.3",
+    "astro": "^5.2.3",
     "tailwindcss": "^3.4.17"
   }
 }
